Rename project references to `<template_name>` and update metadata accordingly

--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
     <template
       data-include="@layout/head.html"
       data-include-params='{
-      "title": "Contact | Cogistics",
+      "title": "Contact | <template_name>",
       "metaTitle": "Contact Page",
       "metaDescription": "This is the contact page.",
       }'
