--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <template
       data-include="@layout/head.html"
       data-include-params='{
-      "title": "Home | Cogistics",
+      "title": "Home | <template_name>",
       "metaTitle": "Homepage",
       "metaDescription": "This is the homepage.",
       }'
@@ -18,7 +18,7 @@
     <div class="page-wrapper">
       <div data-include="@layout/header.html"></div>
       <div class="main-wrapper">
-        <h1 class="text-[20px]">Cogistics</h1>
+        <h1 class="text-[20px]">&lt;template_name&gt;</h1>
         <div
           data-include="@ui/button.html"
           data-include-params='{
